<resources>
    <string name="app_name">DoD_App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_let_s_get_to_know_each_other">Welcome! Let\'s get to\n know each other.</string>
    <string name="please_enter_your_e_mail_n_and_password">Please, enter your e-mail\n and password.</string>
    <string name="kazakh_german_university">Kazakh-German University</string>
    <string name="log_in">Log In</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="welcome_let_s_get_to_n_know_each_other">Welcome! Let\'s get to\n know each other.</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="log_in_text"><u>Log in</u></string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>