<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/kazakh_german_university"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/please_enter_your_e_mail_n_and_password"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/TextInputLayoutusername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:hint="@string/username"
        app:boxBackgroundMode="none"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernamelogin"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="20"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user"
            android:fontFamily="@font/ubuntu_light"
            android:textColor="#9C000000"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutusername"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:fontFamily="@font/ubuntu_light"
            android:inputType="textPassword"
            android:maxLines="1"
            android:lines="1"
            android:maxLength="25"
            android:singleLine="true"
            android:textColor="#99000000"
            android:textColorHint="#546E7A"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutpassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/log_in"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutpassword"
        app:layout_constraintVertical_bias="0.776"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>